webpage/stylesheets/master.css
/* ... */
#sub-features #sub-features-content #sub-features-expectations #expectations-grid div:nth-child(6) {
  width: 100%;
  height: auto;
  padding-left: 60px;
  background: url("media/imgs/sf6.png") no-repeat;
  background-position: left top;
  background-size: 8%;
}

#sub-features #sub-features-content #sub-features-customize {
  width: 100%;
}

#sub-features #sub-features-content #sub-features-customize h2 {
  width: 100%;
  text-align: left;
  margin-top: 100px;
  margin-bottom: 50px;
}

#sub-features #sub-features-content #sub-features-customize #customize-grid {
  width: 100%;
  display: grid;
  grid-template: repeat(2, 1fr)/repeat(2, 1fr);
  grid-gap: 100px 5%;
}

#sub-features #sub-features-content #sub-features-customize #customize-grid div:nth-child(1) {
  width: 100%;
  height: auto;
  padding-left: 60px;
  background: url("media/imgs/sf7.png") no-repeat;
  background-position: left top;
  background-size: 8%;
}

#sub-features #sub-features-content #sub-features-customize #customize-grid div:nth-child(2) {
  width: 100%;
  height: auto;
  padding-left: 60px;
  background: url("media/imgs/sf8.png") no-repeat;
  background-position: left top;
  background-size: 8%;
}

#sub-features #sub-features-content #sub-features-customize #customize-grid div:nth-child(3) {
  width: 100%;
  height: auto;
  padding-left: 60px;
  background: url("media/imgs/sf9.png") no-repeat;
  background-position: left top;
  background-size: 8%;
}

#sub-features #sub-features-content #sub-features-customize #customize-grid div:nth-child(4) {
  width: 100%;
  height: auto;
  padding-left: 60px;
  background: url("media/imgs/sf10.png") no-repeat;
  background-position: left top;
  background-size: 8%;
}

footer {
  width: 100vw;
  padding: 210px 0px;
  background: url("media/imgs/atom-rocket.svg") no-repeat #2C2A2B;
  background-position: calc(50% + 380px) 60px;
  border-top: 1px solid #1A191A;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
}

footer #footer-content {
  width: 860px;
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  flex-direction: row;
}

footer #footer-content #footer-content-left {
  width: 50%;
  height: 275px;
  padding: 20px 100px 0 0;
  box-sizing: border-box;
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  flex-direction: column;
}

footer #footer-content #footer-content-right {
  width: 50%;
  height: 285px;
  padding: 20px 0 0 100px;
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  flex-direction: column;
}

footer #footer-content #footer-content-right #footer-content-right-uls {
  width: 100%;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  flex-direction: row;
}

footer #footer-content #footer-content-right #footer-content-right-uls ul {
  line-height: 1.7em;
  padding-bottom: 35px;
}

footer #footer-content #footer-content-right #footer-content-right-uls ul li {
  font-size: 0.99em;
  padding-right: 35px;
  color: #EFDAB9;
  letter-spacing: 0.04em;
}

footer #footer-content #footer-content-right #footer-content-right-uls ul a {
  color: #FFD152;
}

footer #footer-content #footer-content-right #footer-content-right-uls ul a:hover {
  color: #EBAB00;
}

#sub-footer {
  height: 55px;
  width: 100vw;
  background-color: #EFEAE1;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
}

#sub-footer #sub-footer-content {
  height: 55px;
  width: 860px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
}

#sub-footer #sub-footer-content #sub-footer-content-left ul {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
}

#sub-footer #sub-footer-content #sub-footer-content-left ul li a {
  color: #574c4f;
  padding-right: 19px;
  font-size: 16px;
}

#sub-footer #sub-footer-content #sub-footer-content-right img {
  padding-top: 3px;
}

body {
  height: 100vh;
  width: 100vw;
  font-family: "Helvetica Neue", Helvetica, arial, freesans, clean, sans-serif;
  font-size: 100%;
  color: #EfE8E1;
  background-color: #333233;
}

a {
  text-decoration: none;
  color: inherit;
}

a:hover {
  text-decoration: none;
}

p {
  color: #EFDAB9;
  line-height: 1.45em;
  margin: 16px 0;
  width: 350px;
  letter-spacing: 0.02em;
}

h2 {
  font-size: 1.9em;
  font-weight: 200;
  color: #EFDAB9;
  letter-spacing: .05em;
}

h4 {
  font-size: 1.2em;
  color: #EFDAB9;
  font-weight: 500;
  letter-spacing: 0.02em;
}

